<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/wallpaper_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.android.wallpapercropper.CropView
        android:id="@+id/cropView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ProgressBar
        android:id="@+id/loading"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:indeterminate="true"
        android:indeterminateOnly="true"
        android:visibility="invisible" />

    <FrameLayout
        android:id="@+id/toolbarWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/preview_toolbar_bg_color"
        android:fitsSystemWindows="true"
        android:translationZ="100dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/PreviewToolbar" />
    </FrameLayout>

    <TextView
        android:id="@+id/set_wallpaper_button"
        android:layout_width="240dp"
        android:layout_height="38dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="@dimen/apply_wallpaper_button_margin_bottom"
        android:background="@drawable/round_button_selector"
        android:gravity="center"
        android:text="@string/wallpaper_instructions"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:translationZ="100dp" />

    <LinearLayout
        android:id="@+id/applyMenuWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginBottom="13dp"
        android:background="@drawable/wallpaper_crop_menu_background"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:translationY="250dp"
        android:translationZ="100dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/applyLock"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_height"
            android:background="@drawable/menu_item_top_round_background_ripple"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/menu_button_padding_horizontal"
            android:paddingLeft="@dimen/menu_button_padding_horizontal"
            android:paddingEnd="@dimen/menu_button_padding_horizontal"
            android:paddingRight="@dimen/menu_button_padding_horizontal"
            android:text="@string/apply_keyguard"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/applyHomeScreen"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_height"
            android:background="@drawable/menu_item_background_ripple"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/menu_button_padding_horizontal"
            android:paddingLeft="@dimen/menu_button_padding_horizontal"
            android:paddingEnd="@dimen/menu_button_padding_horizontal"
            android:paddingRight="@dimen/menu_button_padding_horizontal"
            android:text="@string/apply_wallpaper"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/applyAll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_item_height"
            android:background="@drawable/menu_item_background_ripple"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/menu_button_padding_horizontal"
            android:paddingLeft="@dimen/menu_button_padding_horizontal"
            android:paddingEnd="@dimen/menu_button_padding_horizontal"
            android:paddingRight="@dimen/menu_button_padding_horizontal"
            android:text="@string/apply_all"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:background="@color/apply_wallpaper_menu_divider_color" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/menu_button_height"
            android:background="@drawable/menu_item_bottom_round_background_ripple"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/apply_wallpaper_button_text_color"
            android:textSize="14sp" />

    </LinearLayout>

</FrameLayout>
